Preserve extracted affiliations when header consolidation rewrites authors (#1488)
Stage the reconciliation of extracted vs. consolidated authors: 
- exact surname+forename match (copying name and affiliation), 
- a high-threshold soft last-name match for garbled/near-miss cases, then 
- positional allocation of leftovers with partial-match guards against false positives.